--- a/media/css/style.css
+++ b/media/css/style.css
@@ -46,7 +46,7 @@ h2{font-family:"Courier New",Monaco,"Hiragino Sans GB","Microsoft YaHei",sans-se
 h3{font-family:"Courier New",Monaco,"Hiragino Sans GB","Microsoft YaHei",sans-serif;font-size:1.2em;color:#222;}
 h4{font-family:"Courier New",Monaco,"Hiragino Sans GB","Microsoft YaHei",sans-serif;font-size:1em;color:#333;}
 pre,code{font-family:"Courier New",Menlo,"Andale Mono",Consolas,Monaco,monospace;font-size:13px;}
-code{background-color:#efefef;}
+code{background-color:#ffffff;}
 embed,object,iframe{display:block;margin:4px auto;}
 .gist{font-size: 12px;line-height:1.6;}
 
