--- a/media/css/style.css
+++ b/media/css/style.css
@@ -32,7 +32,7 @@ blockquote p{margin:0;padding:.5em 0;}
 }
 
 .listing-item time{color:#999999;}
-.listing-seperator{font-weight:bold;}
+.listing-seperator{font-weight:bold;text-transform: capitalize;}
 .meta{text-align:right;font-size:12px;}
 .pageNav{font-weight:bold;font-size:17px;}
 .pageNavInvalid{font-weight:bold;font-size:17px;color:#D0D0D0;}
