--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
       </div>
 
     <footer>
-        <p>Copyright 2013 - {{site.time | date:"%Y"}} by <a href="/about/">Hamniba</a>  |  <small>Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a>  |  <span class="label label-info" id="timeSpan"></span></small></p>
+        <p>Copyright 2013 - {{site.time | date:"%Y"}} by <a href="/about/">owen</a>  |  <small>Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a>  |  <span class="label label-info" id="timeSpan"></span></small></p>
     </footer>
 
     </div>
