--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
         <span><a title="tags" class="" href="/tags/">Tags</a></span>
         <span><a title="about" class="" href="/about/">About</a></span>
         <span><a title="links" class="" href="/links/">Links</a></span>
-        <span><a title="guestbook" class="" href="/guestbook/">Guestbook</a></span>
+        <!-- <span><a title="guestbook" class="" href="/guestbook/">Guestbook</a></span> -->
         <span><a title="subscribe by RSS" class="" href="/feed/">Subscribe</a></span>
         </nav>
         <article class="content">
