post new article and modified styles.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,7 +26,7 @@ layout: default
 <span class="license">
   Published Under <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">(CC) BY-NC-SA<img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png" /></a>
 </span>
-{% if page.categories %}
+<!-- {% if page.categories %}
 <span class="categories">
   In Categories
   {% for category in page.categories %}
@@ -41,7 +41,7 @@ layout: default
   <a href="/tags/#{{ tag }}" title="{{ tag }}">{{ tag }}</a>&nbsp;
   {% endfor %}
 </span>
-{% endif %}
+{% endif %} -->
 </section>
 <!-- {% include comments.md %} -->
 <!--
